--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,18 @@
   "rules": {
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
+    "noUnusedVariables": {
+      "level": "error",
+      "fix": "none"
+    },
+    "suspicious": {
+      "noDebugger": "off",
+      "noConsoleLog": "info"
+    },
+    "style": {
+      "noShoutyConstants": "warn",
+      "useNamingConvention": "error"
+    },
     "prettier/prettier": [
       "error",
       {},
